# pardy

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  stt_server.py  tsconfig.json  tts_server.py
data/: sample-game.json
public/: buzzer.css  buzzer.html  buzzer.js  host.css  host.html  host.js
scripts/: build_episodes.ts  gen-cert.sh  start-kokoro.sh  start-stt.sh  start.sh  test_board_build.ts
src/: board_builder.ts  games.ts  judge.ts  llm.ts  server.ts  state.test.ts  state.ts  types.ts  voice.ts
