[project]
name = "pardy-voice"
version = "0.1.0"
description = "Local TTS + STT services for Pardy (Kokoro + faster-whisper)"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.0",
    "fastapi>=0.115.0",
    "kokoro-onnx>=0.5.0",
    "numpy>=2.0.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "uvicorn>=0.34.0",
]
